--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 *.exe
 *.o
 *.so
-
+# TEST TEST TEST NEW BRANCH UZAIR ADDED THIS SO DELETE IT 
 # Packages #
 ############
 # it's better to unpack these files and commit the raw source
